@@ -255,8 +255,8 @@ namespace PKHeX
 
 
             if (pk6.Species == 647) // Keldeo
-                if (pk6.AltForm == 1 ^ pk6.Moves.Contains(533))
-                    res[0] = new LegalityCheck(Severity.Invalid, "Sacred Sword / Resolute Keldeo Mismatch.");
+                if (pk6.AltForm == 1 ^ pk6.Moves.Contains(548))
+                    res[0] = new LegalityCheck(Severity.Invalid, "Secret Sword / Resolute Keldeo Mismatch.");
 
             // Duplicate Moves Check
             for (int i = 0; i < 4; i++)
